eks-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      role: backend-service
      version: v1
  template:
    metadata:
      labels:
        app: backend
        role: backend-service     
        version: v1   
      annotations:
        prometheus.io/scrape: 'false'     
    spec: 
      containers:          
        - name: go  
          image: ${ECR_REPO}/backend:latest
          imagePullPolicy: Always   
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
          livenessProbe:
            httpGet: 
              path: /live
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3            
          readinessProbe:
            httpGet: 
              path: /live
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3      

---
apiVersion: v1
kind: Service
metadata:
  name: backend-v1-svc
  namespace: default
spec:
  sessionAffinity: None
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: backend
    role: backend-service
    version: v1
