lattice-frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-route
spec:
  parentRefs:
  - name: lattice-proto
    sectionName: http
  rules:
  - backendRefs:
    - name: frontend-v1-svc
      kind: Service
      port: 80
    #matches:
    #- path:
    #    type: PathPrefix
    #    value: /
